--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 
 <div class="container">
   <div class="container">
-    <div class="row">
+    <div class="container mb-30">
+      <h1 style="text-align: center; font-weight: 700; color: black;">Dashboard</h1>
+      <hr color="black">
+    </div>
+    <div class="row mb-30">
       <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/student/upload_project']">
         <div>
           <mat-icon>assignment</mat-icon>
