--- a/src/app/projects/completed-project/completed-project.component.css
+++ b/src/app/projects/completed-project/completed-project.component.css
@@ -2,15 +2,9 @@ table {
   margin-top: 30px;
   text-align: center;
 }
-.table > tbody > tr {
-  border-top-color: none !important;
+tr:nth-child(even){
+  background-color:  #93bbe4 !important;
 }
 thead {
   font-weight: 600;
 }
-/* table > tbody > tr:nth-of-type(even) {
-  background-color: rgb(27, 138, 153);
-}
-table > tbody > tr:nth-of-type(odd) {
-  background-color: rgb(100, 150, 156);
-} */
