--- a/src/app/projects/completed-project/completed-project.component.html
+++ b/src/app/projects/completed-project/completed-project.component.html
@@ -1,23 +1,31 @@
-<h2 style="text-align: center;">The table below outline projects already completed</h2>
+<div class="container">
+  <h2 style="text-align:center; font-weight: 700;">Submitted Project Topics</h2>
+  <hr color="#1976d2">
 
+  <div class="card mat-elevation-z20" >
 
-<div class="card" mat-table class="mat-elevation-z20" style="margin-left:10%;
-margin-right: 10%;">
-  <table class="table table-striped" width=100%>
-    <thead class="thead">
-      <tr >
-        <td *ngFor='let tHead of tHeads'> {{ tHead }}</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let project of projects;index as i">
-        <td> {{ i + 1}}</td>
-        <td><!--style="text-align: start">--> {{ project.topic }} </td>
-        <td> {{ project.author}} </td>
-        <td> {{ project.uploadDate}} </td>
-        <td> {{ project.supervisor}} </td>
-        <td><button mat-button><mat-icon><a href="{{ project.fileUrl }}"></a>download</mat-icon></button></td>
-      </tr>
-    </tbody>
-  </table>
+  <!-- </div>mat-table style=""> -->
+    <table class="table table-striped">
+      <thead class="thead">
+        <tr>
+          <td> S/No</td>
+          <td>Project Title</td>
+          <td>Author</td>
+          <td>Date</td>
+          <td>Supervisor</td>
+          <td>downloads</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let project of projects;index as i">
+          <td> {{ i + 1}}</td>
+          <td><!--style="text-align: start">--> {{ project.topic }} </td>
+          <td> {{ project.author}} </td>
+          <td> {{ project.uploadDate}} </td>
+          <td> {{ project.supervisor}} </td>
+          <td><button mat-button><mat-icon><a href="./assets/{{project.fileUrl}}" target="_blank"></a>download</mat-icon></button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
