--- a/src/app/projects/project-topics/project-topics.component.html
+++ b/src/app/projects/project-topics/project-topics.component.html
@@ -1,22 +1,17 @@
-<h2 style="text-align: center;">The table below outline Suggested project topics and respective suopervisors to be chosen from</h2>
 
-<div class="container" mat-table class="mat-elevation-z20" style="margin-left:10%;
-margin-right: 10%;">
-<table>
-  <thead>
+<div class="container">
+  <h2 style="text-align:center;font-weight: 700;">Suggested Project Topics</h2>
+  <hr color="#1976d2">
+</div>
+
+<div class="card mat-elevation-z20">
+<table class="table table-striped">
+  <thead class="thead">
     <tr>
-      <td>
-        S/N.
-      </td>
-      <td>
-        Project Topic
-      </td>
-      <td>
-        Submitted By
-      </td>
-      <td>
-        Submission Date
-      </td>
+      <td>S/N.</td>
+      <td>Project Topic</td>
+      <td>Submitted By</td>
+      <td>Submission Date</td>
     </tr>
   </thead>
   <tbody>
