--- a/src/app/supervisor/supervisor.component.html
+++ b/src/app/supervisor/supervisor.component.html
@@ -1,5 +1,9 @@
 <div class="container">
   <div class="container">
+    <div class="container">
+      <h1 style="font-weight: 700;text-align: center;">Dashboard</h1>
+      <hr color="#1976d2">
+    </div>
     <div class="row">
       <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/supervisor/make_appointment']">
         <div>
