--- a/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
+++ b/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
@@ -1,5 +1,8 @@
 <div>
-  <h2 style="text-align: center;">Submit A Project Topic </h2>
+  <div class="container">
+    <h2 style="text-align: center;">Submit A Project Topic </h2>
+    <hr>
+  </div>
   <div class="mat-elevation-z20 card">
     <form method="POST" [formGroup]='uploadTopicForm' >
       <mat-form-field [draggable]='true' appearance='outline' class="full-width">
