--- a/src/app/User/signup/signup.component.html
+++ b/src/app/User/signup/signup.component.html
@@ -1,10 +1,11 @@
 <div class="containerr">
   <div class="containerr">
-    <div class="card mat-elevation-z20">
-      <h1 style="text-align: center;">Signup </h1>
-      <h3 style="text-align: center; padding-left: 15px; color: rgb(104, 102, 100);">Create an account, lets get your details</h3>
-
-
+    <div class="card mat-elevation-z20"style="margin-top: 30px;">
+      <div class="container">
+        <h1 style="text-align: center; font-weight: 700;">Signup </h1>
+        <h3 style="text-align: center; padding-left: 15px; color: rgb(104, 102, 100);">Create an account, lets get your details</h3>
+        <hr color="#1976d2">
+      </div>
       <form method="POST" [formGroup]='signupForm' (ngSubmit)='signUp()'>
         <table class="full-width">
           <tr>
