--- a/src/app/projects/project-topics/project-topics.component.css
+++ b/src/app/projects/project-topics/project-topics.component.css
@@ -1,5 +1,11 @@
 table {
-  width: 100%;
+  margin-top: 30px;
+  /* width: 100%; */
   text-align: center;
-
+}
+tr:nth-child(even){
+  background-color:  #93bbe4 !important;
+}
+thead {
+  font-weight: 600;
 }
