--- a/src/app/student/update-profile/update-profile.component.html
+++ b/src/app/student/update-profile/update-profile.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="container">
+    <div class="container mb-30">
+      <h1 style="text-align: center; font-weight: 700;">Update Profile</h1>
+      <hr color="#1976d2">
+    </div>
     <div class="card mat-elevation-z20">
-      <h1 style="text-align: center;">Update Profile</h1>
-
       <form method="POST" [formGroup]='updateForm' (ngSubmit)='update()'>
           <table class="full-width">
             <tr>
