--- a/src/app/student/upload-chapters/upload-chapters.component.html
+++ b/src/app/student/upload-chapters/upload-chapters.component.html
@@ -1,15 +1,19 @@
+
+<div class="container mb-30">
+  <h1 style="text-align: center; font-weight: 700;">Submit Chapter Documentation</h1>
+  <hr color="#1976d2">
+</div>
 <div class="card mat-elevation-z20" style="min-height: 300px !important;">
-  <h1 style="text-align: center;">Submit Chapter Documentation</h1>
   <form method="POST" [formGroup]='ProjectChapterForm' (ngSubmit)="publish()">
       <div class="center">
         <table>
           <tr>
             <td>
               <mat-form-field [draggable]='true' appearance='outline' style="color: red !important;">
-                <mat-label>Select Lecturer</mat-label>
-                <mat-select formControlName='Lecturer'>
-                  <mat-option *ngFor="let lecturer of lecturers" [value]='lecturer'>
-                    {{ lecturer }}
+                <mat-label>Select Supervisor</mat-label>
+                <mat-select formControlName='Supervisor'>
+                  <mat-option *ngFor="let supervisor of supervisors" [value]='supervisor'>
+                    {{ supervisor }}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
