--- a/src/app/student/upload-project-topic/upload-project-topic.component.html
+++ b/src/app/student/upload-project-topic/upload-project-topic.component.html
@@ -1,5 +1,8 @@
+<div class="container mb-30">
+  <h1 style="text-align: center; font-weight: 700;">Submit Project Topic</h1>
+  <hr color="#1976d2">
+</div>
 <div class="card mat-elevation-z20" style="min-height: 300px !important;">
-  <h1 style="text-align: center;">Submit Project Topic</h1>
   <form [formGroup]='proposalForm' method="POST">
     <div class="center">
       <mat-form-field appearance='outline'>
