--- a/src/app/student/view-chapter-status/view-chapter-status.component.html
+++ b/src/app/student/view-chapter-status/view-chapter-status.component.html
@@ -1,34 +1,42 @@
-<div class="container">
-  <div class="container">
-    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
-      <span style="font-weight: 700;">Topic Submission Status</span>
-      <div class="spacer"></div>
-      <mat-icon style="margin-right: 10px;">done</mat-icon>
-    </div>
-    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
-      <span style="font-weight: 700;">Chapter1 Submission Status</span>
-      <div class="spacer"></div>
-      <mat-icon style="margin-right: 10px;">done</mat-icon>
-    </div>
-    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
-      <span style="font-weight: 700;">Chapter2 Submission Status</span>
-      <div class="spacer"></div>
-      <mat-icon style="margin-right: 10px;">pending_actions</mat-icon>
-    </div>
-    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
-      <span style="font-weight: 700;">Chapter3 Submission Status</span>
-      <div class="spacer"></div>
-      <mat-icon style="margin-right: 10px;">pending_actions</mat-icon>
-    </div>
-    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
-      <span style="font-weight: 700;">Chapter4 Submission Status</span>
-      <div class="spacer"></div>
-      <mat-icon style="margin-right: 10px;">close</mat-icon>
-    </div>
-    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
-      <span style="font-weight: 700;">Chapter5 Submission Status</span>
-      <div class="spacer"></div>
-      <mat-icon style="margin-right: 10px;">close</mat-icon>
-    </div>
-  </div>
+<div class="container mb-30">
+  <h1 style="text-align: center; font-weight: 700;">All Submission Status</h1>
+  <hr color="#1976d2">
+</div>
+<div>
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Topic Submission Status</span>
+  <div class="spacer"></div>
+  <!-- <span style="font-weight: 600; color:rgb(7, 248, 7)">Done</span> -->
+  <mat-icon style="margin-right: 10px; color:rgb(0, 255, 0)">done</mat-icon>
+</div>
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Chapter1 Submission Status</span>
+  <div class="spacer"></div>
+  <!-- <span style="font-weight: 600; color:rgb(0, 255, 0)">Done</span> -->
+  <mat-icon style="margin-right: 10px; color:rgb(0, 255, 0)" color="green">done</mat-icon>
+</div>
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Chapter2 Submission Status</span>
+  <div class="spacer"></div>
+  <!-- <span style="font-weight: 600;">Pending</span> -->
+  <mat-icon style="margin-right: 10px; color:rgb(90, 88, 88)">pending_actions</mat-icon>
+</div>
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Chapter3 Submission Status</span>
+  <div class="spacer"></div>
+  <!-- <span style="font-weight: 600;">Pending</span> -->
+  <mat-icon style="margin-right: 10px; color:rgb(90, 88, 88)">pending_actions</mat-icon>
+</div>
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Chapter4 Submission Status</span>
+  <div class="spacer"></div>
+  <!-- <span style="font-weight: 600; color:red">Rejected</span> -->
+  <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
+</div>
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Chapter5 Submission Status</span>
+  <div class="spacer"></div>
+  <!-- <span style="font-weight: 600; color:red">Rejected</span> -->
+  <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
+</div>
 </div>
