--- a/src/app/User/login/login.component.html
+++ b/src/app/User/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="containerr">
   <div class="containerr">
     <div class="card mat-elevation-z20" style="margin-top: 30px;">
-      <h1 style="text-align: center; font-weight: 600;">Login</h1>
+      <h1>Login</h1>
       <h3 style="text-align: center; padding-left: 15px; color: rgb(104, 102, 100);"> Let's Get You In.</h3>
       <hr color="#1976d2">
-      <form method="POST" [formGroup]="loginForm" (ngSubmit)="login()">
+      <form method="POST" class="mt-50" [formGroup]="loginForm" (ngSubmit)="login()">
         <mat-form-field appearance='legacy' class="full-width">
           <mat-label>Registration Number</mat-label>
           <input matInput placeholder="CST/16/C0M/00543" formControlName='RegistrationNo'>
