--- a/src/app/projects/completed-project/completed-project.component.html
+++ b/src/app/projects/completed-project/completed-project.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 style="text-align:center; font-weight: 700;">Submitted Project Topics</h2>
+  <h1>Submitted Project Topics</h1>
   <hr color="#1976d2">
 
   <div class="card mat-elevation-z20" >
