--- a/src/app/projects/project-topics/project-topics.component.html
+++ b/src/app/projects/project-topics/project-topics.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h2 style="text-align:center;font-weight: 700;">Suggested Project Topics</h2>
+  <h1>Suggested Project Topics</h1>
   <hr color="#1976d2">
 </div>
 
