--- a/src/app/supervisor/make-appointment/make-appointment.component.html
+++ b/src/app/supervisor/make-appointment/make-appointment.component.html
@@ -1,5 +1,8 @@
-<h2 style="text-align: center;"> Send Invite To Student</h2>
-<div class="mat-elevation-z20 card ">
+<div class="container mb-30">
+  <h1> Send Invite To Student</h1>
+  <hr color="#1976d2" style="font-weight: 700;">
+</div>
+<div class="mat-elevation-z20 card">
     <form method="post" [formGroup]='appointmentForm'>
       <div class="center">
           <mat-form-field appearance='outline'>
