--- a/src/app/supervisor/student-list/student-list.component.html
+++ b/src/app/supervisor/student-list/student-list.component.html
@@ -1,5 +1,5 @@
 <div class="card mat-elevation-z20">
-  <h2 style="text-align: center;"> View Students Assigned To You</h2>
+  <h1> View Students Assigned To You</h1>
   <table class="table table-striped">
     <thead class="thead">
       <tr>
