--- a/src/app/supervisor/supervisor.component.html
+++ b/src/app/supervisor/supervisor.component.html
@@ -27,6 +27,17 @@
         </div>
       </div>
 
+      <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/supervisor/submit_project_work']">
+        <div>
+          <mat-icon>school</mat-icon>
+        </div>
+        <br>
+        <div>
+          <h2>Submit Completed Project Work</h2>
+          <p>Upload Completed and Compiled Project Work</p>
+        </div>
+      </div>
+
       <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/supervisor/student_list']">
         <div>
           <mat-icon>school</mat-icon>
