--- a/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
+++ b/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="container">
-    <h2 style="text-align: center;">Submit A Project Topic </h2>
-    <hr>
+    <h1>Submit A Project Topic</h1>
+    <hr color="#1976d2">
   </div>
   <div class="mat-elevation-z20 card">
     <form method="POST" [formGroup]='uploadTopicForm' >
@@ -13,13 +13,9 @@
         <mat-label>Submitted By</mat-label>
         <input matInput placeholder='Dr.Faruk Umar Ambursa' formControlName='SubmittedBy'>
       </mat-form-field>
-      <mat-form-field [draggable]='true' appearance='outline' class="full-width" [hidden]='true'>
-        <mat-label>Submitted By</mat-label>
-        <input matInput placeholder='Dr.Faruk Umar Ambursa' formControlName='Date'>
-      </mat-form-field>
-      <button mat-button class="button" [disabled]='this.uploadTopicForm.invalid'>Upload</button>
+      <button mat-button class="button" [disabled]='this.uploadTopicForm.invalid' (click)="logData()">Upload</button>
     </form>
-  </div>  
+  </div>
 </div>
 <br>
 <div>
