--- a/src/app/User/signup/signup.component.html
+++ b/src/app/User/signup/signup.component.html
@@ -1,67 +1,64 @@
-<div class="containerr">
-  <div class="containerr">
-    <div class="card mat-elevation-z20"style="margin-top: 30px;">
-      <div class="container">
-        <h1 style="text-align: center; font-weight: 700;">Signup </h1>
-        <h3 style="text-align: center; padding-left: 15px; color: rgb(104, 102, 100);">Create an account, lets get your details</h3>
-        <hr color="#1976d2">
-      </div>
-      <form method="POST" [formGroup]='signupForm' (ngSubmit)='signUp()'>
-        <table class="full-width">
-          <tr>
-            <td>
-              <mat-form-field appearance='legacy' class="full-width">
-                <mat-label>First Name</mat-label>
-                <input matInput placeholder="Buhari" formControlName='FirstName'>
-                <mat-icon matSuffix>person</mat-icon>
-              </mat-form-field>
-            </td>
-            <td>
-              <mat-form-field appearance='legacy' class="full-width">
-                <mat-label>Last Name</mat-label>
-                <input matInput placeholder="Doe" formControlName='LastName'>
-                <mat-icon matSuffix>person</mat-icon>
-              </mat-form-field>
-            </td>
-          </tr>
-        </table>
-
-        <mat-form-field appearance='legacy' class="full-width">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="buhari.alhassan0@gmail.com" formControlName='Email'>
-          <mat-icon matSuffix>mail</mat-icon>
-          <mat-error *ngIf="this.signupForm.get('Email')?.hasError('email')">Enter a valid mail address</mat-error>
-        </mat-form-field>
-        <mat-form-field appearance='legacy' class="full-width">
-          <mat-label>Phone Number</mat-label>
-          <span matPrefix align='start'>+234 &nbsp;</span>
-          <input type='tel' matInput placeholder="08145044481" formControlName='Phone'>
-          <mat-icon matSuffix>phone</mat-icon>
-          <mat-error *ngIf="this.signupForm.get('Phone')?.hasError('minlength')">Phone number less than 11 digits</mat-error>
-          <mat-error *ngIf="this.signupForm.get('Phone')?.hasError('maxlength')">Phone number greater than 11 digits</mat-error>
-        </mat-form-field>
-        <mat-form-field appearance='legacy' class="full-width">
-          <mat-label>Registration Number</mat-label>
-          <input matInput placeholder="CST/16/C0M/00543" formControlName='RegistrationNo'>
-          <mat-icon matSuffix>edit</mat-icon>
-          <mat-error *ngIf="this.signupForm.get('RegistrationNo')?.hasError('minlength') || this.signupForm.get('RegistrationNo')?.hasError('maxlength')">must be exactly 16 characters</mat-error>
-          <mat-hint>{{this.signupForm.get('RegistrationNo')?.value.length || 0}}/16</mat-hint>
-        </mat-form-field>
-        <mat-form-field appearance='legacy' class="full-width">
-          <mat-label>Password</mat-label>
-          <input matInput [type]="hide? 'password': 'text'" placeholder="hhh! Enter Something Super Secret" formControlName='Password'>
-          <mat-icon matSuffix (click)="hide = !hide">{{ hide?'visibility':'visibility_off'}} </mat-icon>
-          <mat-error *ngIf="this.signupForm.get('Password')?.hasError('minlength')">must be at least 8 characters long</mat-error>
-        </mat-form-field>
-        <br>
-        <!-- <input type="file" [value]="this.signupForm.get('Photo')?.value" formControlName='Photo' [hidden]='true'> -->
-        <br>
-        <button mat-button class="button" [disabled]="this.signupForm.invalid"><mat-spinner *ngIf='loading' [diameter]='29'></mat-spinner><span *ngIf='!loading'>Sign Up</span></button>
-        <h4 style="text-align: center;">Already have an account?  <a [routerLink]="['/login']">Login</a></h4>
-      </form>
-    </div>
+<div class="card mat-elevation-z20"style="margin-top: 30px;">
+  <div class="container">
+    <h1>Signup </h1>
+    <h3 style="text-align: center; padding-left: 15px; color: rgb(104, 102, 100);">Create an account, lets get your details</h3>
+    <hr color="#1976d2">
   </div>
+  <form method="POST" class="mt-50" [formGroup]='signupForm' (ngSubmit)='signUp()'>
+    <table class="full-width">
+      <tr>
+        <td>
+          <mat-form-field appearance='legacy' class="full-width">
+            <mat-label>First Name</mat-label>
+            <input matInput placeholder="Buhari" formControlName='FirstName'>
+            <mat-icon matSuffix>person</mat-icon>
+          </mat-form-field>
+        </td>
+        <td>
+          <mat-form-field appearance='legacy' class="full-width">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder="Doe" formControlName='LastName'>
+            <mat-icon matSuffix>person</mat-icon>
+          </mat-form-field>
+        </td>
+      </tr>
+    </table>
+
+    <mat-form-field appearance='legacy' class="full-width">
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="buhari.alhassan0@gmail.com" formControlName='Email'>
+      <mat-icon matSuffix>mail</mat-icon>
+      <mat-error *ngIf="this.signupForm.get('Email')?.hasError('email')">Enter a valid mail address</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance='legacy' class="full-width">
+      <mat-label>Phone Number</mat-label>
+      <span matPrefix align='start'>+234 &nbsp;</span>
+      <input type='tel' matInput placeholder="08145044481" formControlName='Phone'>
+      <mat-icon matSuffix>phone</mat-icon>
+      <mat-error *ngIf="this.signupForm.get('Phone')?.hasError('minlength')">Phone number less than 11 digits</mat-error>
+      <mat-error *ngIf="this.signupForm.get('Phone')?.hasError('maxlength')">Phone number greater than 11 digits</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance='legacy' class="full-width">
+      <mat-label>Registration Number</mat-label>
+      <input matInput placeholder="CST/16/C0M/00543" formControlName='RegistrationNo'>
+      <mat-icon matSuffix>edit</mat-icon>
+      <mat-error *ngIf="this.signupForm.get('RegistrationNo')?.hasError('minlength') || this.signupForm.get('RegistrationNo')?.hasError('maxlength')">must be exactly 16 characters</mat-error>
+      <mat-hint>{{this.signupForm.get('RegistrationNo')?.value.length || 0}}/16</mat-hint>
+    </mat-form-field>
+    <mat-form-field appearance='legacy' class="full-width">
+      <mat-label>Password</mat-label>
+      <input matInput [type]="hide? 'password': 'text'" placeholder="hhh! Enter Something Super Secret" formControlName='Password'>
+      <mat-icon matSuffix (click)="hide = !hide">{{ hide?'visibility':'visibility_off'}} </mat-icon>
+      <mat-error *ngIf="this.signupForm.get('Password')?.hasError('minlength')">must be at least 8 characters long</mat-error>
+    </mat-form-field>
+    <br>
+    <!-- <input type="file" [value]="this.signupForm.get('Photo')?.value" formControlName='Photo' [hidden]='true'> -->
+    <br>
+    <button mat-button class="button" [disabled]="this.signupForm.invalid"><mat-spinner *ngIf='loading' [diameter]='29'></mat-spinner><span *ngIf='!loading'>Sign Up</span></button>
+    <h4 style="text-align: center;">Already have an account?  <a [routerLink]="['/login']">Login</a></h4>
+  </form>
 </div>
+
 <br>
 <div>{{this.signupForm.value | json}}</div>
 
@@ -80,14 +77,14 @@
 
 
 
-   <!-- <div class="center">
-      <label for="entity">
-        Register As:
-        <select formControlName='entity' >
-          <option value="" disabled>Choose Entity</option>
-          <option *ngFor="let entity of entities" [ngValue]='entity'>
-            {{ entity }}
-          </option>
-        </select>
-      </label>
-    </div> -->
+<!-- <div class="center">
+  <label for="entity">
+    Register As:
+    <select formControlName='entity' >
+      <option value="" disabled>Choose Entity</option>
+      <option *ngFor="let entity of entities" [ngValue]='entity'>
+        {{ entity }}
+      </option>
+    </select>
+  </label>
+</div> -->
