--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="container">
     <div class="container mb-30">
-      <h1 style="text-align: center; font-weight: 700; color: black;">Dashboard</h1>
+      <h1>Dashboard</h1>
       <hr color="black">
     </div>
     <div class="row mb-30">
