--- a/src/app/student/request-appointment/request-appointment.component.html
+++ b/src/app/student/request-appointment/request-appointment.component.html
@@ -1,5 +1,5 @@
 <div class="container mb-30">
-  <h1 style="text-align: center; font-weight: 700;">Send Visitation Request To Supervisor</h1>
+  <h1>Send Visitation Request To Supervisor</h1>
   <hr color="#1976d2">
 </div>
 <div class="card mat-elevation-z20">
