--- a/src/app/student/upload-chapters/upload-chapters.component.html
+++ b/src/app/student/upload-chapters/upload-chapters.component.html
@@ -1,6 +1,6 @@
 
 <div class="container mb-30">
-  <h1 style="text-align: center; font-weight: 700;">Submit Chapter Documentation</h1>
+  <h1>Submit Chapter Documentation</h1>
   <hr color="#1976d2">
 </div>
 <div class="card mat-elevation-z20" style="min-height: 300px !important;">
