--- a/src/app/supervisor/review-submissions/review-submissions.component.html
+++ b/src/app/supervisor/review-submissions/review-submissions.component.html
@@ -1,1 +1,60 @@
-<p>review-submissions works!</p>
+<div class="container mb-30">
+  <h1>Review Proposal and Chapter Submissions</h1>
+</div>
+<hr color="black" style="font-weight: 700;">
+
+<div class="container">
+  <h2>Proposals</h2>
+  <hr color="white">
+</div>
+
+
+<!-- Div to LOop through -->
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Buhari Ahmed | CST/16/COM/00543</span>
+  <div class="spacer"></div>
+  <span class='nav-item'>
+    <button ngbTooltip='Download Proposal'>
+      <mat-icon>download</mat-icon>
+    </button>
+  </span>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <button mat-button color='primary'> Accept </button>
+  <button mat-button color='warn'> Reject</button>
+</div>
+
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Buhari Ahmed | CST/16/COM/00543</span>
+  <div class="spacer"></div>
+  <span class='nav-item'>
+    <button ngbTooltip='Download Proposal'>
+      <mat-icon>download</mat-icon>
+    </button>
+  </span>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <button mat-button color='primary'> Accept </button>
+  <button mat-button color='warn'> Reject</button>
+</div>
+
+<div class="container">
+  <hr color="white">
+  <h2>Project Chapters</h2>
+  <hr color="white">
+</div>
+
+<!-- To loop through -->
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Buhari Ahmed | CST/16/COM/00543</span>
+  <div class="spacer"></div>
+  <span class='nav-item'>
+    <button ngbTooltip='Download Proposal'>
+      <mat-icon>download</mat-icon>
+    </button>
+  </span>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <button mat-button style="color:lightgreen; border-color: lightgreen;"> Accept </button>
+  <button mat-button color='warn'> Reject</button>
+</div>
