--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,11 @@ h1 {
   text-align: center;
   font-weight: 700 !important;
 }
+h2 {
+  color: black !important;
+  text-align: center;
+  font-weight: 300 !important;
+}
 .spacer {
   flex: 1;
 }
