--- a/src/app/supervisor/review-submissions/review-submissions.component.html
+++ b/src/app/supervisor/review-submissions/review-submissions.component.html
@@ -55,6 +55,6 @@
   </span>
   <div class="spacer"></div>
   <div class="spacer"></div>
-  <button mat-button style="color:lightgreen; border-color: lightgreen;"> Accept </button>
+  <button mat-button color='primary'> Accept </button>
   <button mat-button color='warn'> Reject</button>
 </div>
