--- a/src/app/student/view-chapter-status/view-chapter-status.component.html
+++ b/src/app/student/view-chapter-status/view-chapter-status.component.html
@@ -1,6 +1,11 @@
 <div class="container mb-30">
-  <h1>All Submission Status</h1>
+  <h1>All Status and Notifications</h1>
   <hr color="#1976d2">
+</div>
+
+<div class="container">
+  <h2>Proposal Status</h2>
+  <hr color="white">
 </div>
 
 <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
@@ -9,6 +14,13 @@
   <span style="font-weight: 600; color:rgb(7, 248, 7)">Done</span>
   <mat-icon style="margin-right: 10px; color:rgb(0, 255, 0)">done</mat-icon>
 </div>
+
+<div class="container">
+  <hr>
+  <h2>Chapter Submission Status</h2>
+  <hr color="white !important">
+</div>
+
 <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
   <span style="font-weight: 700;">Chapter1 Submission Status</span>
   <div class="spacer"></div>
@@ -39,9 +51,28 @@
   <span style="font-weight: 600; color:red">Rejected</span>
   <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
 </div>
+
+<div class="container">
+  <hr>
+  <h2>Appointment Request Status</h2>
+  <hr color="white !important">
+</div>
+
 <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
   <span style="font-weight: 700;">Appointment 12:30 Status</span>
   <div class="spacer"></div>
   <span style="font-weight: 600; color:red">Rejected</span>
   <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
+</div>
+
+
+<div class="container">
+  <hr>
+  <h2>Invitations</h2>
+  <hr color="white !important">
+</div>
+
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Visitation Invite</span>
+  <div class="spacer"></div>
 </div>
