--- a/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
+++ b/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="container">
-    <h1>Submit A Project Topic</h1>
+    <h1>Upload A Project Topic</h1>
     <hr color="#1976d2">
   </div>
   <div class="mat-elevation-z20 card">
