--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,8 +34,8 @@
         </div>
         <br>
         <div>
-          <h2>View Status</h2>
-          <p>Click to view status of all submissions</p>
+          <h2>Status and Notifications</h2>
+          <p>Click to view status of all submissions and notifications  </p>
         </div>
       </div>
 
@@ -45,7 +45,7 @@
         </div>
         <br>
         <div>
-          <h2> Request To Meeting</h2>
+          <h2> Request Meeting</h2>
           <p>Click to Request for date and time to see your supervisor</p>
         </div>
       </div>
@@ -56,7 +56,7 @@
         </div>
         <br>
         <div>
-          <h2>View Project Topics</h2>
+          <h2>Project Topics</h2>
           <p>Should you find an interesting topic here, you could send your project proposal with the topic title</p>
         </div>
       </div>
