--- a/src/app/supervisor/review-submissions/review-submissions.component.html
+++ b/src/app/supervisor/review-submissions/review-submissions.component.html
@@ -58,3 +58,27 @@
   <button mat-button color='primary'> Accept </button>
   <button mat-button color='warn'> Reject</button>
 </div>
+
+<div class="container">
+  <hr color="white">
+  <h2>Meeting Requests</h2>
+  <hr color="white">
+</div>
+
+<div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
+  <span style="font-weight: 700;">Buhari Ahmed | CST/16/COM/00543</span>
+  <div class="spacer"></div>
+  <span class='nav-item'>
+    <button ngbTooltip='Download Proposal'>
+      <mat-icon>reviews</mat-icon>
+    </button>
+  </span>
+  <div class="spacer"></div>
+  <h2 style="margin:auto auto">02/08/2021</h2>
+  <div class="spacer"></div>  
+  <h2 style="margin:auto auto">02:30pm</h2>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <button mat-button color='primary'> Accept </button>
+  <button mat-button color='warn'> Reject</button>
+</div>
