--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,13 @@
 </div> -->
 
 <nav class="navbar navbar-expand-lg toolbar">
-  <span [routerLink]="'/'" style="cursor:pointer">Undergraduate PMS</span>
+  <h2 [routerLink]="'/'" style="cursor:pointer;color: white !important;">Undergraduate PMS</h2>
   <div class="spacer"></div>
-  <input type="text" style="width: 20%;" placeholder="Search Projects">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <button class="mt-10 ml-10 mr-10" [routerLink]="['/update_profile']" ngbTooltip='Update Profile' (click)='isMenuCollapsed =true'><mat-icon>person</mat-icon></button>
+    </li>
+  </ul>
   <div class="spacer"></div>
   <div class="spacer"></div>
   <div class="spacer"></div>
@@ -29,10 +33,6 @@
   <div class="spacer"></div>
   <div [ngbCollapse]='isMenuCollapsed' class='collapse navbar-collapse'>
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <button class="mt-10 ml-10 mr-10" [routerLink]="['/update_profile']" ngbTooltip='Update Profile' (click)='isMenuCollapsed =true'><mat-icon>person</mat-icon></button>
-      </li>
-      <div class="spacer"></div>
       <li class="nav-item">
         <button class="mt-10 ml-10 mr-10" ngbTooltip='Download Project Guidelines' (click)='isMenuCollapsed =true'><a href="http://localhost:8000/media/failFast.pdf"></a><mat-icon>download</mat-icon></button>
       </li>
