--- a/src/app/student/upload-chapters/upload-chapters.component.html
+++ b/src/app/student/upload-chapters/upload-chapters.component.html
@@ -1,10 +1,10 @@
 
 <div class="container mb-30">
   <h1>Submit Chapter Documentation</h1>
-  <hr color="#1976d2">
+  <hr>
 </div>
 <div class="card mat-elevation-z20" style="min-height: 300px !important;">
-  <form method="POST" [formGroup]='ProjectChapterForm' (ngSubmit)="publish()">
+  <form [formGroup]='ProjectChapterForm' (ngSubmit)="publish()">
       <div class="center">
         <table>
           <tr>
