--- a/src/app/student/view-chapter-status/view-chapter-status.component.html
+++ b/src/app/student/view-chapter-status/view-chapter-status.component.html
@@ -1,11 +1,11 @@
 <div class="container mb-30">
   <h1>All Status and Notifications</h1>
-  <hr color="#1976d2">
+  <hr>
 </div>
 
 <div class="container">
   <h2>Proposal Status</h2>
-  <hr color="white">
+  <hr>
 </div>
 
 <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
@@ -18,7 +18,7 @@
 <div class="container">
   <hr>
   <h2>Chapter Submission Status</h2>
-  <hr color="white !important">
+  <hr>
 </div>
 
 <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
@@ -55,11 +55,13 @@
 <div class="container">
   <hr>
   <h2>Appointment Request Status</h2>
-  <hr color="white !important">
+  <hr>
 </div>
 
 <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
-  <span style="font-weight: 700;">Appointment 12:30 Status</span>
+  <span style="font-weight: 700;">Appointment Status</span>
+  <div class="spacer"></div>
+  <span style="font-weight: 700;">12:30 pm</span>
   <div class="spacer"></div>
   <span style="font-weight: 600; color:red">Rejected</span>
   <mat-icon style="margin-right: 10px; color:red">close</mat-icon>
@@ -69,10 +71,15 @@
 <div class="container">
   <hr>
   <h2>Invitations</h2>
-  <hr color="white !important">
+  <hr>
 </div>
 
 <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px; background-color: white;">
   <span style="font-weight: 700;">Visitation Invite</span>
   <div class="spacer"></div>
+  <span style="font-weight: 700;">12:30pm</span>
+  <div class="spacer"></div>
+  <span style="font-weight: 700;">02/08/2021</span>
+  <div class="spacer"></div>
 </div>
+<div class="mb-10"></div>
